Added header and Subsection

--- a/index.html
+++ b/index.html
@@ -10,12 +10,48 @@
     <meta name="keywords" content="art paint darw customize design">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap');
     </style>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 
+<body>
+   <header>
+            <section>
+                <img src="images/introimg.jpg" alt="">
+            </section>
 
+            <section class="heading">
+                <h1>The Drawing Club</h1>
+            </section>
+    </header>
+
+
+
+<div class="second-section">
+    <article>
+        <p>
+            Drawing is the foundation of so many creative practices, from 
+            architects to fashion designers to animators and artists. 
+            Using a piece of paper and a pen or pencil, the opportunities for 
+            self-expression are endless. And by using different drawing techniques, 
+            it's incredible to see just how many different ways there are to sketch.
+        </p>
+    </article>
+
+
+    <img src="images/rainbow.png" alt="">
+
+</div>
+
+<br>
+<hr style="width:50%">
+<br>
+
+
+
+</body>
 
 
 
