New work section, header change, responsibility 1.0

--- a/index.html
+++ b/index.html
@@ -17,16 +17,7 @@
 </head>
 
 <body>
-   <header>
-            <section>
-                <img src="images/introimg.jpg" alt="">
-            </section>
-
-            <section class="heading">
-                <h1>The Drawing Club</h1>
-            </section>
-    </header>
-
+    <img class="mainpic" src="images/mainimage.png" alt="">
 
 
 <div class="second-section">
@@ -45,10 +36,21 @@
 
 </div>
 
+
+
+
 <br>
-<hr style="width:50%">
+<hr>
+<br>
 <br>
 
+<h2>Something we can teach you:</h2>
+
+<div class="work">
+    <img src="images/alina1.jpg" alt="">
+    <img src="images/alina2.jpg" alt="">
+    <img src="images/alina3.jpg" alt="">
+</div>
 
 
 </body>
