Kitti's images and font changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <article>
         <p>
             Drawing is the foundation of so many creative practices, from 
-            architects to fashion designers to animators and artists. 
+            architects to fashion designers to animators and artists. <br> 
             Using a piece of paper and a pen or pencil, the opportunities for 
             self-expression are endless. And by using different drawing techniques, 
             it's incredible to see just how many different ways there are to sketch.
@@ -33,16 +33,8 @@
 
 
     <img src="images/rainbow.png" alt="">
-
 </div>
-
-
-
-
-<br>
-<hr>
-<br>
-<br>
+<hr><br><br>
 
 <h2>Something we can teach you:</h2>
 
@@ -50,6 +42,14 @@
     <img src="images/alina1.jpg" alt="">
     <img src="images/alina2.jpg" alt="">
     <img src="images/alina3.jpg" alt="">
+</div>
+<br>
+<hr>
+<br>
+<div class="work">
+    <img src="images/kitti1.png" alt="">
+    <img src="images/kitti2.png" alt="">
+    <img src="images/kitti3.png" alt="">
 </div>
 
 
