--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="art paint darw customize design">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Neucha&display=swap');
     </style>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -36,21 +36,30 @@
 </div>
 <hr><br><br>
 
-<h2>Something we can teach you:</h2>
+<div class="joinus">
+
+</div>
+
+<br><hr><br>
+
+<h2>Alina's work</h2>
 
 <div class="work">
     <img src="images/alina1.jpg" alt="">
     <img src="images/alina2.jpg" alt="">
     <img src="images/alina3.jpg" alt="">
 </div>
-<br>
-<hr>
-<br>
+<br><hr><br>
+
+<h2>Kitti's work</h2>
+
 <div class="work">
     <img src="images/kitti1.png" alt="">
     <img src="images/kitti2.png" alt="">
     <img src="images/kitti3.png" alt="">
 </div>
+
+
 
 
 </body>
