--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 
 <div class="joinus">
 
+ <h2>We are looking for new members! Join us today!</h2>
+
+ <br>
+
+ <a href="https://moodle.zealand.dk/mod/groupselect/view.php?id=123888" class="hvr-pulse-grow">Join us!</a>
+
 </div>
 
 <br><hr><br>
@@ -45,18 +51,18 @@
 <h2>Alina's work</h2>
 
 <div class="work">
-    <img src="images/alina1.jpg" alt="">
-    <img src="images/alina2.jpg" alt="">
-    <img src="images/alina3.jpg" alt="">
+    <img src="images/alina1.jpg" alt="" class="hvr-grow">
+    <img src="images/alina2.jpg" alt="" class="hvr-grow">
+    <img src="images/alina3.jpg" alt="" class="hvr-grow">
 </div>
 <br><hr><br>
 
 <h2>Kitti's work</h2>
 
 <div class="work">
-    <img src="images/kitti1.png" alt="">
-    <img src="images/kitti2.png" alt="">
-    <img src="images/kitti3.png" alt="">
+    <img src="images/kitti1.png" alt="" class="hvr-grow">
+    <img src="images/kitti2.png" alt="" class="hvr-grow">
+    <img src="images/kitti3.png" alt="" class="hvr-grow">
 </div>
 
 
