New section with Kitti's logo and description

--- a/index.html
+++ b/index.html
@@ -21,6 +21,25 @@
 
 
 <div class="second-section">
+
+    <img src="images/kittilogo.png" alt="">
+
+    <article>
+        <p>
+           Welcome to the Drawing club! By this platform, 
+           we would like to show you the ways.
+           Drawing doesn't require any special talents,
+           just the will to do it and get better.
+           That's why we started drawing club, to help each
+           other and help you, meet new people and spend time resourcefully .
+        </p>
+    </article>
+
+
+</div>
+<hr><br><br>
+
+<div class="third-section">
     <article>
         <p>
             Drawing is the foundation of so many creative practices, from 
